# lh-workshop-plugin

./: README.md  lh-workshop.cabal
src/: M01Index.lhs  M02Refinements.lhs  M03DataTypes.lhs  M04InsertSort.lhs  M05Eval.lhs  M06ByteString.lhs
