cabal-version: 1.12

name:           lh-workshop
version:        0.1.0.0
description:    This toy package demonstrates the use of LH as a plugin.
homepage:
bug-reports:
author:         Ranjit Jhala
maintainer:     jhala@cs.ucsd.edu
copyright:      2020 Ranjit Jhala
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      M01Index
      M02Refinements
      M03DataTypes
      M04InsertSort
      M05Eval
      M06ByteString
  hs-source-dirs:
      src
  build-depends:
      liquid-prelude,
      liquid-vector,
      bytestring,
      liquidhaskell
  if impl(ghc >= 9.2)
    build-depends:
      base,
      containers,
      vector
  else
    build-depends:
      liquid-base,
      liquid-containers
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
